# backpack

./: .gitignore  README.md
include/backpack/: items.hpp  node.hpp
src/: CMakeLists.txt  items.cpp  main.cpp  node.cpp
